# OPTIMET

./: .clang-format  .gitignore  .gitmodules  AJ_AuxFuns.cpp  AJ_AuxFuns.h  AJ_Surf_Integrals.cpp  AJ_Surf_Integrals.h  Algebra.cpp  Algebra.h  AlgebraS.cpp  AlgebraS.h  Aliases.h  AuxCoefficients.cpp  AuxCoefficients.h  Bessel.cpp  Bessel.h  Blacs.h  BlacsContext.cc  BlacsContext.h  BlacsExit.cc  BlacsExit.h  CMakeLists.txt  Cartesian.h  CoAxialTranslationCoefficients.cpp  CoAxialTranslationCoefficients.h  Coefficients.h  CompoundIterator.cpp  CompoundIterator.h  Coupling.cpp  Coupling.h  ElectroMagnetic.cpp  ElectroMagnetic.h  Excitation.cpp  Excitation.h  FMMBelosSolver.cpp  FMMBelosSolver.h  FastMatrixMultiply.cpp  FastMatrixMultiply.h  GPL_Licence.c  Geometry.cpp  (+68 more)
benchmarks/: CMakeLists.txt  benchmarks.cpp  cmdl.cpp  cmdl.h  fcc.cpp  fcc.h  fmm_multiplication.cpp  scalapack_multiplication.cpp  solver.cpp
cmake/: AddRegression.cmake  DetectFortran.cmake  DetectIntegerArchitecture.cmake  FindARMA.cmake  FindF2C.cmake  FindGSL.cmake  FindHDF5.cmake  HunterGate.cmake  LookUp-GreatCMakeCookOff.cmake  dependencies.cmake  regression.cmake  regression.in.cmake  run_test.cmake
cmake/Hunter/: config.cmake
examples/: 2TouchingSpheres.xml  ElevenParticlesSi.xml  FastOneParticle.xml  FastSpiralStructure.xml  FastThreeParticles.xml  GaAsCrystal.xml  MPIscriptGaAs.sh  MPIscriptMNY.sh  MPIscriptMNY2.sh  MPIscriptMNY3.sh  MPIscriptMNY4.sh  MPIscriptONE.sh  MPIscriptTHREE.sh  MPIscriptTWO.sh  ManyParticles.xml  ManyParticlesACA.xml  ManySpheres.xml  ManySpheres2.xml  ManySpheres3.xml  ManySpheres4.xml  ManySpheresnonc.xml  OneParticle.xml  OneParticleAu.xml  OneParticleScan.xml  OneParticleSilicon.xml  SpiralStructure.xml  ThreeParticles.xml  ThreeParticlesAu.xml  ThreeParticlesSilicon.xml  ThreeSpheres.xml  ThreeSpheresSilicon.xml  TwoParticlesAu.xml  TwoParticlesSi.xml  TwoSpheres.xml  TwoSpheresSilicon.xml
examples/meshlib/: coord_r200R300.txt  coord_r50R100.txt  coord_r50R30.txt  coord_r50R40.txt  coord_r50R50.txt  coord_r50R60.txt  coord_r50R70.txt  coord_r50R80.txt  coord_r50R90.txt  topol_r200R300.txt  topol_r50R100.txt  topol_r50R30.txt  topol_r50R40.txt  topol_r50R50.txt  topol_r50R60.txt  topol_r50R70.txt  topol_r50R80.txt  topol_r50R90.txt
examples/output/: ManySpheresnonc.e95567  ManySpheresnonc.e95716  ManySpheresnonc.po95567  ManySpheresnonc.po95716
examples/scalingScript/: MPIscriptMNYp10.sh  MPIscriptMNYp100.sh  MPIscriptMNYp110.sh  MPIscriptMNYp120.sh  MPIscriptMNYp130.sh  MPIscriptMNYp20.sh  MPIscriptMNYp30.sh  MPIscriptMNYp40.sh  MPIscriptMNYp50.sh  MPIscriptMNYp60.sh  MPIscriptMNYp70.sh  MPIscriptMNYp80.sh  MPIscriptMNYp90.sh
manuals/: OPTIMET_manual.docx
mpi/: Collectives.h  Collectives.hpp  Communicator.cpp  Communicator.h  FastMatrixMultiply.cpp  FastMatrixMultiply.h  GraphCommunicator.cpp  GraphCommunicator.h  RegisteredTypes.cpp  RegisteredTypes.h  Session.cpp  Session.h
pugi/: pugiconfig.hpp  pugixml.cpp  pugixml.hpp
scalapack/: Belos.h  Belos.hpp  Blacs.h  BroadcastToOutOfContext.h  Collectives.cpp  Collectives.h  Context.cpp  Context.h  InitExit.cpp  InitExit.h  LinearSystemSolver.cpp  LinearSystemSolver.h  LinearSystemSolver.hpp  Matrix.cpp  Matrix.h  Matrix.hpp  Parameters.cpp  Parameters.h
src/: Algebra.cpp  Aliases.h  AuxCoefficients.cpp  AuxCoefficients.h  Bessel.h  Cartesian.h  CoAxialTranslationCoefficients.cpp  CoAxialTranslationCoefficients.h  ElectroMagnetic.cpp  ElectroMagnetic.h  Excitation.cpp  Excitation.h  FMMBelosSolver.cpp  FMMBelosSolver.h  Geometry.cpp  Geometry.h  MatrixBelosSolver.cpp  MatrixBelosSolver.h  Output.cpp  OutputGrid.cpp  OutputGrid.h  PreconditionedMatrix.cpp  PreconditionedMatrix.h  PreconditionedMatrixSolver.h  Reader.cpp  Result.cpp  Result.h  RotationCoaxialDecomposition.h  RotationCoefficients.cpp  Run.h  ScalapackSolver.cpp  ScalapackSolver.h  Scatterer.cpp  Scatterer.h  Simulation.cpp  Simulation.h  Solver.cpp  Solver.h  Spherical.h  SphericalP.h  (+8 more)
src/mpi/: Communicator.h  GraphCommunicator.cpp  GraphCommunicator.h  RegisteredTypes.h  Session.cpp  Session.h
src/scalapack/: Belos.hpp  LinearSystemSolver.hpp  Matrix.cpp  Matrix.h
srcAna/: AuxCoefficients.h  CompoundIterator.cpp  Coupling.cpp  ElectroMagnetic.h  Excitation.cpp  Geometry.cpp  Geometry.h  HarmonicsIterator.cpp  HarmonicsIterator.h  MatrixBelosSolver.cpp  Output.h  OutputGrid.h  PreconditionedMatrix.cpp  PreconditionedMatrix.h  Reader.cpp  Result.cpp  Run.h  ScalapackSolver.cpp  ScalapackSolver.h  Scatterer.cpp  Scatterer.h  Simulation.cpp  Simulation.h  Solver.cpp  Spherical.h  Symbol.h  Tools.cpp  Tools.h  TranslationAdditionCoefficients.cpp  Trian.h  amos.c  constants.cpp
srcAna/scalapack/: BroadcastToOutOfContext.h  Context.h  LinearSystemSolver.h  LinearSystemSolver.hpp  Parameters.cpp
srcAr/: Bessel.h  Coupling.cpp  Coupling.h  ElectroMagnetic.cpp  ElectroMagnetic.h  Excitation.cpp  Excitation.h  Geometry.cpp  Geometry.h  HarmonicsIterator.h  MatrixBelosSolver.cpp  OutputGrid.cpp  OutputGrid.h  PreconditionedMatrix.cpp  PreconditionedMatrix.h  PreconditionedMatrixSolver.h  Reader.cpp  Result.cpp  Result.h  ScalapackSolver.cpp  Scatterer.cpp  Scatterer.h  Simulation.cpp  Simulation.h  Solver.cpp  Solver.h  SphericalP.h  Symbol.cpp  Symbol.h  Tools.cpp  Tools.h  Trian.cpp  Trian.h  main.cpp
srcAr/scalapack/: Collectives.cpp  InitExit.cpp  Parameters.h
unittests/: CMakeLists.txt  TmpFile.h  aux_coefficients.cpp  belos.cpp  blacs_context.cpp  coaxial_translation.cpp  common_catch_main.cpp  common_mpi_catch_main.cpp  fast_matrix_multiply.cpp  fmm_distribution.cpp  harmonics_iterator.cpp  mpi_communicator.cpp  mpi_scattering_matrix.cpp  parallel_fmm.cpp  print_belos_params.cpp  regressions.cpp  rotation_coaxial_decomposition.cpp  rotation_coefficients.cpp  scalapack_collectives.cpp  scalapack_context.cpp  scalapack_linear_system.cpp  scalapack_matrix.cpp  scalapack_vs_belos.cpp  serial_vs_parallel.cpp  single_particle.cpp  squarest.cpp  translation_addition.cpp
